parts 2 and 3 done without unique styling

--- a/main_app/templates/about.html
+++ b/main_app/templates/about.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}
 {% block content %}
 
-    <h1>About the N64 Games Collector</h1>
+    <h1>About the Nintendo 64 Games Collector</h1>
     <hr>
-    <p>Contact the N64 Games Collector!</p>
-    <footer>All Rights Reserved, &copy; 2023 N64 Games Collector</footer>
+    <p>Contact the Nintendo 64 Games Collector!</p>
+    <footer>All Rights Reserved, &copy; 2023 Nintendo 64 Games Collector</footer>
     {% endblock %}
