--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>N64 Games Collector</title>
+  <title>Nintendo 64 Games Collector</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
   <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
 </head>
@@ -15,11 +15,12 @@
     <nav>
       <div class="nav-wrapper">
         <ul>
-          <li><a href="/" class="left brand-logo">&nbsp;&nbsp;N64 Games Collector</a></li>
+          <li><a href="{% url 'home' %}" class="left brand-logo">&nbsp;&nbsp;Nintendo 64 Games Collector</a></li>
         </ul>
         <ul class="right">
-          <li><a href="/about">About</a></li>
-          <li><a href="/n64games">View All N64 Games</a></li>
+          <li><a href="{% url 'about' %}">About</a></li>
+          <li><a href="{% url 'n64games_create' %}">Add a Nintendo 64 Game</a></li>
+          <li><a href="{% url 'index' %}">View All Nintendo 64 Games</a></li>
         </ul>
       </div>
     </nav>
@@ -29,7 +30,7 @@
     {% endblock %}
   </main>
   <footer class="page-footer">
-    <div class="right">All Rights Reserved, &copy; 2023 N64 Games Collector &nbsp;</div>
+    <div class="right">All Rights Reserved, &copy; 2023 Nintendo 64 Games Collector &nbsp;</div>
   </footer>
 </body>
 </html>
