part 5 done default styling

--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -20,6 +20,8 @@
         </ul>
         <ul class="right">
           <li><a href="{% url 'about' %}">About</a></li>
+          <li><a href="{% url 'players_create' %}">Add a Player</a></li>
+          <li><a href="{% url 'players_index' %}">View All Players</a></li>
           <li><a href="{% url 'n64games_create' %}">Add a Nintendo 64 Game</a></li>
           <li><a href="{% url 'index' %}">View All Nintendo 64 Games</a></li>
         </ul>
